--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- TODO: initialize repsoitory tomorrow and start styling the css for desktop -->
+  <!-- TODO: initialize repsoitory tomorrow and start styling the css for desktop 
+  2: Fix push issues through git and windows; check to see which key needs setting up
+  3: Can start styling the mobile design when finishing fixing task #2
+  -->
   <!-- main -->
   <main>
     <!-- component-container -->
-    <div class="component__container">
+    <div class="card__container">
       <!-- component__row -->
-      <div class="row">
+      <div class="card__row">
         <!-- left -->
         <div class="left-rectangle">
           <div>
            <h4>Your Result</h4>
           </div>
           <!-- circle results -->
-          <div>
-            <h1>76</h1>
-            of 100
+          <div class="results__circle">
+            <h1><span>76</span></h1>
+            <p><span>of 100</span></p>
           </div>
           <!-- circle results -->
           <div>
             <h3>Great</h3>
-            <p>You performance exceeded 65% of the people who have taken these tests.</p>
+            <p>Your performance exceeded 65% of the people who have taken these tests.</p>
           </div>
         </div>
         <!--/ left -->
@@ -39,19 +42,23 @@
           </div>
           <div class="scores__box reaction">
             <img src="assets/images/icon-reaction.svg" alt="reaction icon">
-            <p>Reaction<span> 80 / 100</span></p>
+            <h4>Reaction</h4>
+            <p><span>80 / 100</span></p>
           </div>
           <div class="scores__box memory">
             <img src="assets/images/icon-memory.svg" alt="memory icon">
-            <p>Memory<span> 92 / 100</span></p>
+            <h4>Memory</h4>
+            <p><span>92 / 100</span>
           </div>
           <div class="scores__box verbal">
             <img src="assets/images/icon-verbal.svg" alt="verbal icon">
-           <p> Verbal<span> 61 / 100</span></p>
+            <h4>Verbal</h4>
+            <p><span>61 / 100</span></p>
           </div>
           <div class="scores__box visual">
             <img src="assets/images/icon-visual.svg" alt="visual icon">
-           <p> Visual<span> 72 / 100</span></p>
+            <h4>Visual</h4>
+            <p><span>72 / 100</span></p>
           </div>
           <div>
             <a href="#" class="btn__C">Continue</a>
@@ -65,5 +72,4 @@
   </main>
 <!--/ main  -->
 </body>
-
 </html>
