using outline to debug overflow on mobile, and recording learnings reflection through README file

--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- TODO: initialize repsoitory tomorrow and start styling the css for desktop 
-  2: Fix push issues through git and windows; check to see which key needs setting up
-  3: Can start styling the mobile design when finishing fixing task #2
+  <!-- TODO: 
+    debug the circle around score number
   -->
-  <!-- main -->
-  <main>
     <!-- component-container -->
     <div class="card__container">
       <!-- component__row -->
@@ -69,7 +66,5 @@
       <!--/ component__row -->
     </div>
     <!--/ component-container -->
-  </main>
-<!--/ main  -->
 </body>
 </html>
